fix textarea overflowing on CluckForm

--- a/client/src/components/CluckForm.css
+++ b/client/src/components/CluckForm.css
@@ -1,6 +1,7 @@
 .cluck-form {
   display: flex;
-  background-color: #fff;
+  flex-direction: column;
+  background-color: #ffffff;
   border: 2px solid #657786;
   border-radius: 5px;
   padding: 10px;
@@ -24,12 +25,13 @@
 }
 
 .cluck-textarea {
-  width: 100%;
+  flex-grow: 1;
+  width: 95%;
   height: 60px;
   border: none;
   resize: none;
   outline: none;
-  background-color: #fff;
+  background-color: #ffffff;
   color: #000000;
   font-size: 14px;
   padding: 10px;
@@ -37,13 +39,14 @@
   overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  margin-top: 20px;
+  margin-left: -60px;
 }
-
 .cluck-textarea::-webkit-scrollbar {
   display: none;
 }
 
-.cluck-form-container {
+.form-content {
   display: flex;
   align-items: start;
 }
@@ -52,7 +55,7 @@
   align-self: flex-end;
   padding: 6px 16px;
   font-weight: bold;
-  color: #fff;
+  color: #ffffff;
   background-color: #000000;
   border: none;
   border-radius: 20px;
